--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -9,12 +9,13 @@
             android:fillViewport="true">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/mainactivity_layout"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusable="true"
+        android:focusable="false"
         android:focusableInTouchMode="true"
         tools:context=".ui.main.MainActivity">
         <TextView
