--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:id="@+id/witty_life_scrollview"
+            xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.main.RankingActivity">
 
     <LinearLayout
@@ -43,33 +52,48 @@
 
     </LinearLayout>
 
+    <!--<ViewStub-->
+        <!--android:id="@+id/qol_stub"-->
+        <!--android:inflatedId="@+id/qol_import"-->
+        <!--android:layout="@layout/qol_table_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="300dp"-->
+        <!--android:layout_gravity="center|center_vertical" />-->
+
     <TableLayout
         android:id="@+id/ranking_table_layout"
-        android:layout_width="match_parent"
-        android:layout_height="316dp"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        android:layout_marginBottom="150dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        android:stretchColumns="*"
+
         android:background="@drawable/table_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filter_layout">
+        app:layout_constraintTop_toBottomOf="@+id/filter_layout"
+
+        android:animateLayoutChanges="false"
+
+    >
 
         <TableRow android:id="@+id/ranking_header"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_margin="8dp"
-                  android:background="@color/colorPrimary"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
         >
             <TextView android:id="@+id/ranking_text"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
-                      android:layout_width="0dp"
+                      android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
+                      android:layout_marginBottom="5dp"
                       android:layout_marginStart="8dp"
                       android:layout_marginTop="5dp"
-                      android:layout_marginBottom="5dp"
 
                       android:text="@string/rank"
-                      android:textAlignment="viewStart"
+                      android:textAlignment="center"
                       android:textSize="16sp"
             />
 
@@ -77,33 +101,36 @@
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_marginStart="0dp"
+                      android:layout_marginBottom="5dp"
+                      android:layout_marginStart="12dp"
                       android:layout_marginTop="5dp"
-                      android:layout_marginBottom="5dp"                      android:textAlignment="center"
-                      android:textSize="16sp"
                       android:text="@string/ranking_city"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
             />
 
             <TextView android:id="@+id/ranking_index"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_marginStart="12dp"
+                      android:layout_marginBottom="5dp"
+                      android:layout_marginStart="15dp"
                       android:layout_marginTop="5dp"
-                      android:layout_marginBottom="5dp"                      android:textAlignment="center"
-                      android:textSize="16sp"
                       android:text="@string/ranking_qolindex"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
             />
 
-            <TextView android:id="@+id/pp_value"
+            <TextView android:id="@+id/ranking_value"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_marginStart="12dp"
+                      android:layout_marginBottom="5dp"
+                      android:layout_marginStart="5dp"
                       android:layout_marginTop="5dp"
-                      android:layout_marginBottom="5dp"                      android:textAlignment="center"
-                      android:textSize="16sp"
                       android:text="@string/PP_Index"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
             />
 
 
@@ -117,26 +144,38 @@
             android:background="#dadada"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <TableRow android:id="@+id/safety_index_row" android:layout_width="match_parent"
+        <TableRow android:id="@+id/safety_index_row"
+                  android:layout_width="match_parent"
                   android:layout_height="match_parent"
 
         >
-            <TextView android:id="@+id/rank_text"
+            <TextView android:id="@+id/first_rank"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="8dp"
                       android:layout_marginTop="10dp"
-                      android:text="@string/safety_text"
-                      android:textAlignment="viewStart"
+                      android:text="1"
+                      android:textAlignment="center"
                       android:textSize="16sp"
             />
 
-            <TextView android:id="@+id/city_value"
+            <TextView android:id="@+id/first_city"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_marginEnd="12dp"
+                      android:layout_marginEnd="8dp"
+                      android:layout_marginStart="20dp"
+                      android:layout_marginTop="10dp"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
+                      tools:text="Raleigh"
+            />
+
+            <TextView android:id="@+id/first_qol"
+                      style="@style/Base.TextAppearance.AppCompat.Headline"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
                       android:layout_marginStart="12dp"
                       android:layout_marginTop="10dp"
                       android:textAlignment="center"
@@ -144,18 +183,7 @@
                       tools:text="120.00"
             />
 
-            <TextView android:id="@+id/qolindex_value"
-                      style="@style/Base.TextAppearance.AppCompat.Headline"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_marginStart="12dp"
-                      android:layout_marginTop="10dp"
-                      android:textAlignment="center"
-                      android:textSize="16sp"
-                      tools:text="120.00"
-            />
-
-            <TextView android:id="@+id/ppindex_value"
+            <TextView android:id="@+id/first_ppindex"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
@@ -178,22 +206,40 @@
 
         <TableRow android:id="@+id/healthcare_index_row" android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                 >
-            <TextView android:id="@+id/health_text"
+        >
+            <TextView android:id="@+id/second_rank"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="8dp"
                       android:layout_marginTop="10dp"
-                      android:text="@string/health_text"
-                      android:textAlignment="viewStart"
+                      android:text="2"
+                      android:textAlignment="center"
                       android:textSize="16sp"/>
 
-            <TextView android:id="@+id/healthcare_value"
+            <TextView android:id="@+id/second_city"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_marginEnd="12dp"
+                      android:layout_marginEnd="8dp"
+                      android:layout_marginStart="20dp"
+                      android:layout_marginTop="10dp"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
+                      tools:text="San Francisco"/>
+            <TextView android:id="@+id/second_qol"
+                      style="@style/Base.TextAppearance.AppCompat.Headline"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginStart="12dp"
+                      android:layout_marginTop="10dp"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
+                      tools:text="120.00"/>
+            <TextView android:id="@+id/second_ppi"
+                      style="@style/Base.TextAppearance.AppCompat.Headline"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
                       android:layout_marginStart="12dp"
                       android:layout_marginTop="10dp"
                       android:textAlignment="center"
@@ -214,23 +260,41 @@
         <TableRow android:id="@+id/climate_index_row" android:layout_width="match_parent"
                   android:layout_height="match_parent"
         >
-            <TextView android:id="@+id/climate_text"
+            <TextView android:id="@+id/third_rank"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="8dp"
                       android:layout_marginTop="10dp"
-                      android:text="@string/climate_text"
-                      android:textAlignment="viewStart"
+                      android:text="3"
+                      android:textAlignment="center"
                       android:textSize="16sp"/>
 
 
-            <TextView android:id="@+id/climate_value"
+            <TextView android:id="@+id/third_city"
                       style="@style/Base.TextAppearance.AppCompat.Headline"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_marginEnd="12dp"
+                      android:layout_marginEnd="8dp"
+                      android:layout_marginStart="20dp"
+                      android:layout_marginTop="10dp"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
+                      tools:text="120.00"/>
 
+            <TextView android:id="@+id/third_qol"
+                      style="@style/Base.TextAppearance.AppCompat.Headline"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginStart="12dp"
+                      android:layout_marginTop="10dp"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
+                      tools:text="120.00"/>
+            <TextView android:id="@+id/third_ppiindex"
+                      style="@style/Base.TextAppearance.AppCompat.Headline"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
                       android:layout_marginStart="12dp"
                       android:layout_marginTop="10dp"
                       android:textAlignment="center"
@@ -247,7 +311,69 @@
             android:background="#dadada"
             app:layout_constraintStart_toStartOf="parent"/>
 
+        <TableRow android:id="@+id/last_row" android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+        >
+            <TextView android:id="@+id/last_rank"
+                      style="@style/Base.TextAppearance.AppCompat.Headline"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginStart="8dp"
+                      android:layout_marginTop="10dp"
+                      android:text="4"
+                      android:textAlignment="center"
+                      android:textSize="16sp"/>
+
+
+            <TextView android:id="@+id/last_city"
+                      style="@style/Base.TextAppearance.AppCompat.Headline"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginEnd="8dp"
+                      android:layout_marginStart="20dp"
+                      android:layout_marginTop="10dp"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
+                      tools:text="120.00"/>
+
+            <TextView android:id="@+id/last_qol"
+                      style="@style/Base.TextAppearance.AppCompat.Headline"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginStart="12dp"
+                      android:layout_marginTop="10dp"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
+                      tools:text="120.00"/>
+            <TextView android:id="@+id/last_ppindex"
+                      style="@style/Base.TextAppearance.AppCompat.Headline"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginStart="12dp"
+                      android:layout_marginTop="10dp"
+                      android:textAlignment="center"
+                      android:textSize="16sp"
+                      tools:text="120.00"/>
+
+        </TableRow>
+
     </TableLayout>
 
 
+    <ProgressBar
+        android:id="@+id/pb_loading_indicator"
+        android:layout_height="42dp"
+        android:layout_width="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+
+    />
+
+
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
