--- a/app/src/main/res/layout/activity_comparison.xml
+++ b/app/src/main/res/layout/activity_comparison.xml
@@ -47,10 +47,20 @@
                     android:layout_height="match_parent">
 
         <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/chart1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/seekBar1" />
+            android:id="@+id/piechart"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_above="@+id/stackbar"
+            android:layout_centerInParent="true"
+        />
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/stackbar"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_above="@+id/seekBar1"
+            android:layout_centerInParent="true"
+        />
 
         <SeekBar
             android:id="@+id/seekBar2"
